--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -5,9 +5,7 @@ footer {
     text-align: center;
     position: absolute;
     bottom: 0;
-}
-
-span {
-    display: inline-block;
-    vertical-align: middle;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
