--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -6,9 +6,7 @@ footer {
     position: absolute;
     border-top: solid 1px #CCCCCC;
     bottom: 0;
-}
-
-span {
-    display: inline-block;
-    vertical-align: middle;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
