--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -4,6 +4,9 @@
     width: 100%;
     border: solid 1px #DDDDDD;
     border-radius: 4px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .filters button {
@@ -15,7 +18,7 @@
     border: none;
     border-radius: 4px;
     float: right;
-    margin: 10px 30px 0 0;
+    margin-right: 30px;
 }
 
 .filters button:hover {
