--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -5,7 +5,7 @@
     border: solid 1px #DDDDDD;
     border-radius: 4px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -17,8 +17,8 @@
     width: 20%;
     border: none;
     border-radius: 4px;
-    float: right;
     margin-right: 30px;
+    margin-left: 200px;
 }
 
 .filters button:hover {
@@ -29,9 +29,12 @@
     height: 100%;
     width: 25%;
     border-right: 1px solid #DDDDDD;
+    padding-left: 4%;
+    position: relative;
 }
 
 .filters .locations h3 {
+    margin-top: 15px;
     font-weight: 600;
 }
 
@@ -43,9 +46,12 @@
 .filters .amenities {
     height: 100%;
     width: 25%;
+    position: relative;
+    padding-left: 4%;
 }
 
 .filters .amenities h3 {
+    margin-top: 15px;
     font-weight: 600;
 }
 
