--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -73,7 +73,12 @@
 }
 
 .filters .locations .popover h2 {
+    padding: 15px 0 0 15px;
     font-size: 16px;
+}
+
+.filters .locations .popover li {
+    padding: 5px 0 0 35px;
 }
 
 .filters .locations:hover .popover {
@@ -92,6 +97,10 @@
         left: 0;
 }
 
+.filters .amenities .popover li {
+    margin-top: 10px;
+    padding: 5px 0 0 35px;
+}
 .amenities:hover .popover {
     display: block;
 }
