--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -13,6 +13,7 @@
 .places ul li {
     list-style-type: none;
 }
+
 .places ul li article {
     width: 390px;
     padding: 20px;
@@ -22,7 +23,7 @@
     position: relative;
 }
 
-.places ul li article h2{
+.places ul li article h2 {
     text-align: center;
     font-size: 30px;
 
@@ -53,22 +54,32 @@
     margin-top: 30px;
 }
 
-.places ul li article .information .max_guest  {
+.places ul li article .information .max_guest {
     width: 100px;
     background: url('../images/icon_group.png') no-repeat;
+    background-position: center;
     position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
+
 .places ul li article .information .max_guest h3 {
     position: absolute;
     bottom: 0;
 }
 
-.places ul li article .information .number_rooms  {
+.places ul li article .information .number_rooms {
     width: 100px;
     background: url('../images/icon_bed.png') no-repeat;
+    background-position: center;
     position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
-.places ul li article .information .number_rooms  h3 {
+
+.places ul li article .information .number_rooms h3 {
     position: absolute;
     bottom: 0;
 }
@@ -76,7 +87,11 @@
 .places ul li article .information .number_bathrooms {
     width: 100px;
     background: url('../images/icon_bath.png') no-repeat;
+    background-position: center;
     position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .places ul li article .information .number_bathrooms h3 {
